# union_native

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Makefile_linux  Makefile_osx  Makefile_win  README.md  build.cjs  build.js  package.json  tsconfig.json  wasm.cjs
app/: AppIcon.icns  Info.plist  icon.icns  un.entitlements
app/Media.xcassets/AppIcon.appiconset/: Contents.json
build_tool/: collect_source.py  convert_shader.py  path_util.py
build_tool/linux/: Makefile
build_tool/osx/: Makefile
build_tool/win/: Makefile
cmake/: Findlibuv.cmake  Include.cmake  Install.cmake  Lib.cmake  Link.cmake  Options.cmake  Platform.cmake  PostBuild.cmake  ThirdParty.cmake  UnityBuild.cmake  iOS.cmake
doc/: Build.md
example/: .gitignore  build.js  dev.js  package.json  tsconfig.json
example/public/: index.html  index.js  index.js.map  terrain.html
example/public/shader/: terrain.vert
example/src/: index.ts  pipeline.ts  simple.ts  terrain.ts  type.d.ts
example/triangle/: triangle.js
font/: Lato-Regular.json  dump.js
gist/: small.c
node/: api.ts  build.js  dev.js  prod.js  shader.cjs
node/public/: index.html
node/public/shader/: ui.frag  ui.hlsl  ui.metal  ui.vert  ui.wgsl
node/src/: main.ts  simple.ts
npm/: install.js  package.json
npm/example/: build.js  dev.js  package.json
npm/example/public/shader/: terrain.frag  terrain.vert
npm/example/src/: index.ts  simple.ts  terrain.ts
npm/platform/darwin_x64/: package.json
npm/platform/linux_x64/: package.json
npm/platform/win32_x64/: package.json
npm/public/shader/: ui.metal  ui.vert
public/example/: cube.js  triangle.js
public/shader/: base.frag  base.vert  ui.vert
resource/shader/: blit.hlsl
resource/shader/hlsl/: base.hlsl
resource/shader/metal/: base.metal
script/: dep.py  wasm.py
shader/: ui.frag  ui.vert
src/: imgui_layer.cpp  imgui_layer.h  main.c  main.cpp  main.rs  main_new.c  test.c  union.h  webgpu_context.cpp  webgpu_context.h
src/app/: main.c  main_linux.c
src/apple/: metal.h  metal.m  metal_type.m  os.ios.m  os.m  os.macos.m  os.macos.mm
src/common/: common.c  common.h
src/component/os_window/: os_window.h  window.linux.c  window.osx.m  window.win.c
src/component/render_system/: render.metal.c  render.vulkan.c  render_backend.h  render_command.h  render_command_buffer.h  render_resource.h  render_shader.h  render_system.c  render_system.h  render_types.h  shader.c  shader.h
src/component/script/: script.h  script.js.c
src/component/ui/: ui.h  ui_draw.c  ui_draw.h  ui_primitive_buffer.c  ui_primitive_buffer.h
src/core/: api.h  db.c  db.h  global.h  io.c  io.h  logger.c  logger.h  network.c  network.h  simd.h  text.h
src/d3d11/: device.c
src/dtype/: array.c  dtype.h
src/foundation/: allocator.c  allocator.h  api.h  array.inl  asset_io.h  atomic.inl  autorelease_allocator.h  color_space.c  color_space.h  db.c  db.h  device.h  error.h  format.c  format.h  foundation.h  global.h  gpu.c  gpu.h  html_parser.c  html_parser.h  io.c  io.h  job.c  job.h  job_system.c  job_system.h  json.h  libcoro.inl  logger.c  logger.h  network.c  network.h  os.file.c  os.h  os.osx.c  os.win.c  os.window.c  os_window.h  platform.h  (+21 more)
src/foundation/gles32/: encoder.c  encoder.h
src/foundation/io/: io.c  io.h
src/foundation/linux/: linux_window.c  linux_window.h
src/foundation/logger/: logger.c  logger.h
src/foundation/metal/: metal_backend.h  metal_backend.m
src/foundation/osx/: metal_device.c  metal_device.h  osx_window.c  osx_window.h  osx_window.m
src/foundation/render/: pipeline.c  pipeline.h  render.c  render.h  type.h
src/foundation/render_system/: render_system.c  render_system.h
src/foundation/script/: script.c  script.gles.c  script.h
src/foundation/source-map/: sm.h
src/foundation/string/: ustring.h
src/foundation/vulkan/: vulkan_backend.c  vulkan_backend.h
src/foundation/win/: win_window.c  win_window.h
src/gpu/: gpu.c  gpu.dawn.cpp  gpu.h  gpu_const.h
src/graphics/: color.c  color.cpp  graphics.h  light.c  math.c  object.c  object.cpp  ray.c  scene.c  vec.c
src/include/: common.h  dtype.h  glm.h  glm_ext.h  global.h  graphics.h  hit.h  scene.h
src/io/: io.h  webp_output.c
src/macos/: gpu.h  gpu.mm  metal.h  metal.m  metal_type.m  os.ios.m  os.macos.m
src/os/: d3d11.c  os.c  os.cpp  os.file.c  os.file.cpp  os.h  os.time.c  os.time.cpp  os.win.c  os.win.cpp  os.windows.c
src/plugin/arg_parse/: arg_parse.c  arg_parse.h
src/plugin/imageio/: imageio.c  imageio.h
src/plugin/spirv_reflect/: spirv_reflect.c  spirv_reflect_api.c  spirv_reflect_api.h
src/plugin/webp/: webp_io.h
src/private/: allocator.c  array.c  camera.c  color.c  hit.c  material.c  object.c  ppm_output.c  ray.c  sampler.c  scene.c  webp_output.c  worker.c
src/public/: allocator.h  array.h  array.inl  atomic.inl  camera.h  container.h  glm.h  glm_ext.h  global.h  hit.h  io.h  platform.h  sampler.h  scene.h  simd.h  types.h  worker.h
src/script/: api.h  browser.c  browser.h  script.c  script.h  script.jsc.c  script.jsc.cpp  script.jsc.mm  script.qjs.c  script.stub.c  script.stub.cpp  script.v8.cpp  script_context.c  script_context.h  script_gpu.c  script_gpu.cpp  script_gpu.h  webgl.c  webgl.h  webgl2.c  webgl2.h  webgpu.c  webgpu.h
src/test/: test.c
src/ui/: msdf_font.c  msdf_font.h  ui.h  ui_button.c  ui_button.h  ui_component.h  ui_dev_tool.c  ui_dev_tool.h  ui_draw.c  ui_draw.h  ui_font.c  ui_font.h  ui_input.c  ui_input.h  ui_keycode.c  ui_keycode.h  ui_label.c  ui_label.h  ui_primitive_buffer.c  ui_renderer.c  ui_renderer.cpp  ui_renderer.h  ui_scroll_view.c  ui_scroll_view.h  ui_shader.h  ui_state.c  ui_state.h  ui_style_default.h  ui_theme.c  ui_theme.h  ui_type.c  ui_type.h
src/vulkan/: device.c
ts/api/: README.md  index.d.ts  package.json
ts/test/: esbuild.build.js  esbuild.js  package.json  tsconfig.json
ts/test/src/: index.ts
union_gfx/: Cargo.toml
union_gfx/src/: class_define.rs  engine.rs  lib.rs  native.rs  object.rs
union_native/: Cargo.toml
union_native/src/: main.rs
(+10 files in other folders)
